--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,11 @@
 {
-  "require": {
-    "sendgrid/sendgrid": "~5.0.9"
+  "require" : {
+    "ext-mbstring": "*"
+  },
+  "require-dev": {
+    "heroku/heroku-buildpack-php": "*"
+  },
+  "scripts" : {
+    "post-install-cmd" : "composer create-project phpmyadmin/phpmyadmin; cp config.inc.php phpmyadmin/"
   }
 }
