Even more fixed to emails

--- a/sendgrid.env
+++ b/sendgrid.env
@@ -1,1 +1,1 @@
-export SENDGRID_API_KEY='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'
+export SENDGRID_API_KEY='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'
