--- a/sendgrid.env
+++ b/sendgrid.env
@@ -1,1 +1,1 @@
-export SENDGRID_API_KEY='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'
+export SENDGRID_API_KEY='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'
